[package]
name = "water-levels"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web  = "3.3"
env_logger = "0.9"
maud       = { version = "0.22", features = ["actix-web"] }
serde      = "1"
getset     = "0.1"
tokio      = { version = "1", features = ["sync", "macros"] }
anyhow     = "1"

[dev-dependencies]
tokio-test = "0.4"
float_eq   = "0.6"
quickcheck = "1"

